kubernetes/app/ytdl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl
  labels:
    app.kubernetes.io/name: ytdl
    todosapp.tier: backend # Extra annotacio; nem hasznaljuk a pod azonositasahoz
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http # A kontener definicio portjara hivatkozik
      name: http # A service-en ezen neven lesz elerheto a port
  selector:
    app.kubernetes.io/name: ytdl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl
  labels:
    app.kubernetes.io/name: ytdl
    todosapp.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ytdl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ytdl
        todosapp.tier: backend
    spec:
      containers:
        - name: ytdl
          image: todoapp/ytdl:v1
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ytdl
  labels:
    app.kubernetes.io/name: ytdl
    todosapp.tier: backend
  annotations:
    # Forward authentikacio beallitasa annotaciokkal https://docs.traefik.io/v1.7/configuration/backends/kubernetes/#authentication
    traefik.ingress.kubernetes.io/auth-url: http://users/api/auth
    traefik.ingress.kubernetes.io/auth-response-headers: Authorization
    traefik.ingress.kubernetes.io/auth-type: forward
spec:
  rules:
    - http:
        paths:
          - path: /api/ytdl
            backend:
              serviceName: ytdl # A service neve
              servicePort: http # A service-ben a port neve (lehet a port szama is)
